WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221494
REGRESSION (
r264574
): Unchecked JS exception in validateAndApplyPropertyDescriptor()
https://bugs.webkit.org/show_bug.cgi?id=221494
Summary
REGRESSION (r264574): Unchecked JS exception in validateAndApplyPropertyDescr...
Alexey Shvayka
Reported
2021-02-05 11:48:18 PST
REGRESSION (
r264574
): Unchecked JS exception in validateAndApplyPropertyDescriptor()
Attachments
Patch
(4.72 KB, patch)
2021-02-05 11:53 PST
,
Alexey Shvayka
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Shvayka
Comment 1
2021-02-05 11:53:52 PST
Created
attachment 419441
[details]
Patch
Yusuke Suzuki
Comment 2
2021-02-06 16:30:58 PST
Comment on
attachment 419441
[details]
Patch r=me
EWS
Comment 3
2021-02-06 16:34:25 PST
commit-queue failed to commit
attachment 419441
[details]
to WebKit repository. To retry, please set cq+ flag again.
EWS
Comment 4
2021-02-06 19:13:59 PST
Committed
r272466
: <
https://commits.webkit.org/r272466
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 419441
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-02-10 14:39:01 PST
<
rdar://problem/74206912
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug