REGRESSION (r264574): Unchecked JS exception in validateAndApplyPropertyDescriptor() https://bugs.webkit.org/show_bug.cgi?id=221494

Reviewed by Yusuke Suzuki.

JSTests:

* stress/redefine-property-same-value-exception-check.js: Added.

Source/JavaScriptCore:

This patch brings back exception check after sameValue(), which was accidentally
removed in r264574. sameValue() may throw OOM when comparing rope strings.

Even though this case was unreachable because of PropertyDescriptor::equalTo()
fast path, we should maintain consistent exception checks.

For the same reason, sameValue() in protoFuncFinalizationRegistryRegister() is
replaced with pointer comparison, which is safe & unobservable because `target`
is a known JSObject.

* runtime/FinalizationRegistryPrototype.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):
* runtime/JSObject.cpp:
(JSC::validateAndApplyPropertyDescriptor):


Canonical link: https://commits.webkit.org/233780@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272466 268f45cc-cd09-0410-ab3c-d52691b4dbfc